fixed nav width to not overflow

--- a/unit1_projects/stylesheets/blog3.css
+++ b/unit1_projects/stylesheets/blog3.css
@@ -4,9 +4,17 @@
 
 body{
 	font-family: 'Abel', sans-serif;
+	min-height: 100%;
+	min-width: 100%;
 }
 
- nav {
+#navbackground{
+	background: url("images/green_cup.png");
+	min-height: 100%;
+	min-width: 100%;
+}
+
+nav {
     position: fixed;
     z-index: 9999;
     left: 5%;
@@ -15,18 +23,18 @@ body{
     -moz-transform: translateY(-30%);
     -ms-transform: translateY(-30%);
     transform: translateY(-30%);
-    background: url('images/3.png');
+    width: 10%;
+    margin: 2em;
+    background: transparent;
 }
 
 nav img{
-	/*max-width: 20%;*/
-	/*max-height: 30%;*/
-	max-width: 35%;
-	max-height: 60%;
+	max-width: 100%;
+	max-height: 100%;
 	border-radius: 50%;
 	display: block;
 	position: relative;
-	margin-bottom: 5%;
+	margin-bottom: 10%;
 	margin-top:5%;
 }
 
@@ -34,7 +42,7 @@ nav a{
 	display: block;
     position: relative;
     height: 50px;
-    width: 35%;
+    width: 100%;
     text-decoration: none;
     font-weight: 900;
     color:#C1D0D9;
@@ -90,18 +98,6 @@ section {
 	display: block;
 	padding-left: 15%;
 }
-#ref1{
+#ref1, #ref2, #ref3, #ref4, #ref5{
 
-}
-#ref2{
-	
-}
-#ref3{
-	
-}
-#ref4{
-	
-}
-#ref5{
-	
 }
